--- a/Tile Calculator/index.html
+++ b/Tile Calculator/index.html
@@ -6,29 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tile Calulator</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+
 </head>
 
 <body>
-    <div>
-        <h1>Tile Calulator</h1>
-        <div>
-            <form>
-                <div>
-                    Height: <input type="text" id="input1">
-                </div>
-                <div>
-                    Width: <input type="text" id="input2">
-                </div>
-                <div>
-                    Cost: <input type="text" id="cost">
-                </div>
-                <button type="button" onclick="myFunction()">Click Me!</button>
-            </form>
+    <div class="container">
+        <h1 class="mx-auto m-5">Tile Calulator</h1>
+        <form>
+            <div class="form-group">
+                <label for="width">Width of floor plan</label>
+                <input type="text" class="form-control" id="width">
+            </div>
+            <div class="form-group">
+                <label for="height">Height of floor plan</label>
+                <input type="text" class="form-control" id="height">
+            </div>
+            <div class="form-group">
+                <label for="cost">Cost of square metre</label>
+                <input type="text" class="form-control" id="cost">
+            </div>
+            <button type="button" class="btn btn-primary btn-block" onclick="myFunction()">Calculate the cost</button>
+        </form>
+    </div>
+
+    <div class="container p-5">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Cost:</h5>
+                <h6 class="card-subtitle mb-2 text-muted" id="output">Insert the numbers and calculate</h6>
+            </div>
         </div>
     </div>
 
+    <script src="tilecalculator.js"></script>
 
-    <script src="app.js"></script>
 </body>
 
 </html>
